Domain Clashing Additions: 1) During the clash, the barriers of domains now change dynamically, showing power of domain in real time. 2) New power system for domain clashes. Currently, the power of domain depends on the user's HP level. If dropped to certain number, domain automatically deactivate.