@@ -1,37 +1,39 @@
-package com.aleksiyflekssiy.tutorialmod.cursedtechnique.skill;
+package com.aleksiyflekssiy.tutorialmod.cursedtechnique.skill.domainexpansion;
 
 import com.aleksiyflekssiy.tutorialmod.capability.CursedEnergyCapability;
 import com.aleksiyflekssiy.tutorialmod.capability.CursedTechniqueCapability;
+import com.aleksiyflekssiy.tutorialmod.cursedtechnique.skill.Skill;
 import com.mojang.datafixers.util.Pair;
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.Vec3i;
 import net.minecraft.core.particles.ParticleTypes;
 import net.minecraft.network.chat.Component;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.sounds.SoundEvents;
-import net.minecraft.util.Mth;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.level.ClipContext;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
+import net.minecraft.world.phys.HitResult;
 import net.minecraft.world.phys.Vec3;
 
 import java.util.*;
 
-public abstract class DomainExpansionSkill extends Skill{
+public abstract class DomainExpansionSkill extends Skill {
     protected static final int DOMAIN_DURATION = 600;
     protected static final float BOUNDARY_THICKNESS = 1F;
     protected static final BlockState DEFAULT_BARRIER_BLOCK = Blocks.BLACK_CONCRETE.defaultBlockState();
     protected static final BlockState CLASHING_BARRIER_BLOCK = Blocks.WHITE_CONCRETE.defaultBlockState();
 
+    public BlockPos startPos;
     protected int domainTicks;
-    protected float domainRadius = 15;
+    protected double domainRadius;
     protected int charge;
     protected boolean isActive;
     protected boolean isOpen = false;
+    protected BlockState domainBlock = DEFAULT_BARRIER_BLOCK;
 
     public Map<BlockPos, BlockState> getOriginalBlocks() {
         return originalBlocks;
@@ -120,26 +122,29 @@ public abstract class DomainExpansionSkill extends Skill{
     }
 
     protected void deployBarrier(ServerLevel level, Player player) {
-        float diameter = (domainRadius + domainRadius) * Math.max(1, charge);
-        double radius = diameter / 2.0;
+        float diameter = (15 + 15) * Math.max(1, charge);
+        domainRadius = diameter / 2;
         double thickness = BOUNDARY_THICKNESS;
 
         // Пол — ровно на уровне ног игрока
         double floorY = player.blockPosition().getY()-1;
 
+        Vec3 eyePos = player.getEyePosition(1.0F); // Позиция глаз игрока
+        Vec3 lookVec = player.getViewVector(1.0F); // Вектор взгляда
+        Vec3 endPos = eyePos.add(lookVec.x * domainRadius / 2, lookVec.y * domainRadius / 2, lookVec.z * domainRadius / 2);
+
         // Центр всей сферы — ровно на уровне пола (игрок в центре сферы!)
-        Vec3 center = new Vec3(player.getX(), floorY, player.getZ());
+        Vec3 center = new Vec3(endPos.x, floorY, endPos.z);
 
         domainCenter = center;
         domainTicks = 0;
 
         BlockPos centerPos = BlockPos.containing(center);
-        int scanRadius = (int) Math.ceil(radius + thickness + 3);
+        startPos = centerPos;
+        int scanRadius = (int) Math.ceil(domainRadius + thickness + 3);
 
         if (!DomainExpansionManager.willBeDomainClash(this)) {
-
-            BlockState barrierBlock = DEFAULT_BARRIER_BLOCK;
-
+            domainBlock = DEFAULT_BARRIER_BLOCK;
             int floorBlockY = (int) floorY;
 
             for (int x = -scanRadius; x <= scanRadius; x++) {
@@ -155,10 +160,10 @@ public abstract class DomainExpansionSkill extends Skill{
                         // === ПОЛ — ровная плоскость на уровне игрока ===
                         if (pos.getY() == floorBlockY) {
                             double horizDist = Math.sqrt(dx * dx + dz * dz);
-                            if (horizDist <= radius + thickness) {
+                            if (horizDist <= domainRadius + thickness) {
                                 originalBlocks.put(pos.immutable(), level.getBlockState(pos));
                                 if (!isOpen) {
-                                    level.setBlock(pos, barrierBlock, 3);
+                                    level.setBlock(pos, domainBlock, 3);
                                     barrierBlocks.add(pos.immutable());
                                 }
                             }
@@ -166,15 +171,15 @@ public abstract class DomainExpansionSkill extends Skill{
                         }
 
                         // === Стенки сферы (верхняя и нижняя полусферы) ===
-                        if (distance <= radius + thickness && distance > radius - thickness) {
+                        if (distance <= domainRadius + thickness && distance > domainRadius - thickness) {
                             originalBlocks.put(pos.immutable(), level.getBlockState(pos));
                             if (!isOpen) {
-                                level.setBlock(pos, barrierBlock, 3);
+                                level.setBlock(pos, domainBlock, 3);
                                 barrierBlocks.add(pos.immutable());
                             }
                         }
                         // === Внутри сферы — воздух (кроме пола) ===
-                        else if (distance <= radius - thickness) {
+                        else if (distance <= domainRadius - thickness) {
                             if (!originalBlocks.containsKey(pos.immutable())) {
                                 originalBlocks.put(pos.immutable(), level.getBlockState(pos));
                             }
@@ -188,13 +193,13 @@ public abstract class DomainExpansionSkill extends Skill{
 
             // AABB домена — полностью симметричный
             domainArea = new AABB(
-                    center.x - radius - thickness - 2, center.y - radius - thickness - 2, center.z - radius - thickness - 2,
-                    center.x + radius + thickness + 2, center.y + radius + thickness + 2, center.z + radius + thickness + 2
+                    center.x - domainRadius - thickness - 2, center.y - domainRadius - thickness - 2, center.z - domainRadius - thickness - 2,
+                    center.x + domainRadius + thickness + 2, center.y + domainRadius + thickness + 2, center.z + domainRadius + thickness + 2
             );
 
             // Все сущности — на пол
             if (!isOpen) {
-                for (LivingEntity entity : level.getEntitiesOfClass(LivingEntity.class, domainArea.expandTowards(0, radius * 2, 0))) {
+                for (LivingEntity entity : level.getEntitiesOfClass(LivingEntity.class, domainArea.expandTowards(0, domainRadius * 2, 0))) {
                     if (entity != player && canAffect(entity)) {
                         entity.teleportTo(entity.getX(), floorY + 1.1, entity.getZ());
                         affectedEntities.add(entity);
@@ -207,18 +212,79 @@ public abstract class DomainExpansionSkill extends Skill{
         }
     }
 
+//    private void invadeDomainOld(ServerLevel level, Player player) {
+//        System.out.println("INVASION");
+//
+//        Pair<DomainExpansionSkill, DomainExpansionSkill> pair = DomainExpansionManager.getClashingPair(this);
+//        if (pair == null) throw new IllegalStateException("No clashing domain found");
+//
+//        domainBlock = CLASHING_BARRIER_BLOCK;
+//
+//        DomainExpansionSkill victim = pair.getFirst() == this ? pair.getSecond() : pair.getFirst();
+//
+//        Vec3 victimCenter = victim.getDomainCenter();
+//        double invadeRadius = victim.domainRadius * 0.4; // сколько "захватываем"
+//
+//        player.teleportTo(player.getX(), victimCenter.y + 1.1, player.getZ());
+//        startPos = player.blockPosition().below();
+//
+//        BlockPos playerPos = player.blockPosition();
+//        int r = (int) Math.ceil(invadeRadius);
+//
+//        // Используем immutable ключи!
+//        List<BlockPos> capturedPositions = new ArrayList<>();
+//
+//        for (BlockPos pos : BlockPos.betweenClosed(
+//                playerPos.offset(-r, -r, -r),
+//                playerPos.offset(r, r, r))) {
+//
+//            BlockPos immutable = pos.immutable();
+//
+//            // Проверяем, что это действительно барьер жертвы
+//            if (victim.barrierBlocks.contains(immutable)) {
+//                capturedPositions.add(immutable);
+//
+//                // 1. Сохраняем оригинальный блок (если ещё нет)
+//                BlockState original = victim.originalBlocks.get(immutable);
+//                if (original != null) {
+//                    this.originalBlocks.put(immutable, original);
+//                }
+//
+//                // 2. Заменяем блок на наш барьер
+//                level.setBlock(pos, domainBlock, 3);
+//
+//                // 3. Удаляем из списка жертвы БЕЗОПАСНО
+//                victim.barrierBlocks.remove(immutable);
+//                victim.originalBlocks.remove(immutable); // теперь ключ совпадает!
+//            }
+//        }
+//
+//        // 4. Добавляем в свой список
+//        this.barrierBlocks.addAll(capturedPositions);
+//
+//        System.out.println(domainOwner.getScoreboardName() + " захвачено " + capturedPositions.size() +
+//                " блоков у " + victim.domainOwner.getScoreboardName());
+//
+//        // Опционально: эффект вторжения
+//        level.sendParticles(ParticleTypes.DRAGON_BREATH,
+//                player.getX(), player.getY() + 1, player.getZ(),
+//                50, 2, 2, 2, 0.1);
+//    }
+
     private void invadeDomain(ServerLevel level, Player player) {
         System.out.println("INVASION");
 
-        Pair<DomainExpansionSkill, DomainExpansionSkill> pair = DomainExpansionManager.getClashingPair(this);
-        if (pair == null) throw new IllegalStateException("No clashing domain found");
+        DomainClash clash = DomainExpansionManager.getDomainClash(this);
 
-        DomainExpansionSkill victim = pair.getFirst() == this ? pair.getSecond() : pair.getFirst();
+        domainBlock = CLASHING_BARRIER_BLOCK;
+
+        DomainExpansionSkill victim = clash.getDomains().get(0);
 
         Vec3 victimCenter = victim.getDomainCenter();
         double invadeRadius = victim.domainRadius * 0.4; // сколько "захватываем"
 
         player.teleportTo(player.getX(), victimCenter.y + 1.1, player.getZ());
+        startPos = player.blockPosition().below();
 
         BlockPos playerPos = player.blockPosition();
         int r = (int) Math.ceil(invadeRadius);
@@ -243,7 +309,7 @@ public abstract class DomainExpansionSkill extends Skill{
                 }
 
                 // 2. Заменяем блок на наш барьер
-                level.setBlock(pos, CLASHING_BARRIER_BLOCK, 3);
+                level.setBlock(pos, domainBlock, 3);
 
                 // 3. Удаляем из списка жертвы БЕЗОПАСНО
                 victim.barrierBlocks.remove(immutable);
@@ -322,8 +388,12 @@ public abstract class DomainExpansionSkill extends Skill{
             barrierBlocks.clear();
             originalBlocks.clear();
             domainArea = null;
+            startPos = null;
+            domainRadius = 0;
+            System.out.println(domainOwner.getScoreboardName() + " isn't clashed");
         }
         domainCenter = null;
+        domainBlock = DEFAULT_BARRIER_BLOCK;
         System.out.println("Restoration is skill");
     }
 
